corrected categoty page

--- a/app/index.html
+++ b/app/index.html
@@ -534,18 +534,20 @@
 
 
                             <!-- PAGINATION -->
-                            <div class="numpage_navigation"><p align="left"><span class="style2b decor_gantel">Сторінки:</span>
-                                <a class="navItem" href=""> &lt;
-                                &lt;ПОПЕРЕДНЯ </a><a class="navItem">|</a><a class="navItem"
-                                                                             href=""> 1 </a><a
-                                        class="navItem_n_activ">|</a><a class="navItemSel"> 2 <span
-                                        class="navItem_n_activ">|</span></a><a class="navItem"
-                                                                               href=""> 3 </a><a
-                                        class="navItem_n_activ">|</a><a class="navItem"
-                                                                        href=""> 4 </a><a
-                                        class="navItem_n_activ">|</a><a class="navItem"
-                                                                        href=""> НАСТУПНА&gt;&gt; </a>
-                            </div>
+                            <nav class="bl_pagination clearfix">
+                                <span class="nav_text decor_gantel">Сторінки:</span>
+                                <ul class="bl_pagination__full">
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link bl_pagination__before"
+                                                                       href="">ПОПЕРЕДНЯ</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">1</a></li>
+                                    <li class="bl_pagination__item"><span
+                                            class="bl_pagination__link bl_pagination__link_active">2</span></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">3</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">4</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link bl_pagination__next"
+                                                                       href="">НАСТУПНА</a></li>
+                                </ul>
+                            </nav>
                             <!-- PAGINATION END -->
 
 
@@ -2990,77 +2992,79 @@
                                 </div>
                             </div>
 
-                            <div class="numpage_navigation"><p align="left"><span class="style2b">Сторінки:</span><img
-                                    src="images/arrows.jpg" width="18" height="9" border="0"><a class="navItem"
-                                                                                                href="?k=household_fans&p=1&filter=producer=dospel"> &lt;
-                            &lt;ПОПЕРЕДНЯ </a><a class="navItem">|</a><a class="navItem"
-                                                                         href="?k=household_fans&p=1&filter=producer=dospel"> 1 </a><a
-                                    class="navItem_n_activ">|</a><a class="navItemSel"> 2 <span
-                                    class="navItem_n_activ">|</span></a><a class="navItem"
-                                                                           href="?k=household_fans&p=3&filter=producer=dospel"> 3 </a><a
-                                    class="navItem_n_activ">|</a><a class="navItem"
-                                                                    href="?k=household_fans&p=4&filter=producer=dospel"> 4 </a><a
-                                    class="navItem_n_activ">|</a><a class="navItem"
-                                                                    href="?k=household_fans&p=3&filter=producer=dospel"> НАСТУПНА&gt;&gt; </a>
-                            </div>
+                            <!-- PAGINATION -->
+                            <nav class="bl_pagination clearfix">
+                                <span class="nav_text decor_gantel">Сторінки:</span>
+                                <ul class="bl_pagination__full">
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link bl_pagination__before"
+                                                                       href="">ПОПЕРЕДНЯ</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">1</a></li>
+                                    <li class="bl_pagination__item"><span
+                                            class="bl_pagination__link bl_pagination__link_active">2</span></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">3</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link" href="">4</a></li>
+                                    <li class="bl_pagination__item"><a class="bl_pagination__link bl_pagination__next"
+                                                                       href="">НАСТУПНА</a></li>
+                                </ul>
+                            </nav>
+                            <!-- PAGINATION END -->
 
 
                         </div>
 
                     </div>
 
-                    <div id="blok_main_2_2" class='blok_main_2_2'>
-
-
-                    </div>
 
                 </div>
             </div>
         </div>
     </main>
 
+    <!-- CEO -->
+    <div class="container">
+        <div class="col-xs-12">
+            <div class="bottom_info">
+                <span style="font-weight: bold;">Побутові вентилятори</span>
 
-    <div class="bottom_info">
-        <span style="font-weight: bold;">Побутові вентилятори</span>
+                Для деякого підвищення потужності вентиляції, без необхідності
+                порушувати систему природної вентиляції будівлі, додатково застосовують
+                побутові вентилятори, які служать для поліпшення якості повітрообміну.
+                Їх використовують в невеликих побутових приміщеннях: санвузлах, ванних
+                кімнатах, кухнях та житлових приміщеннях.
+                Люди навіть не підозрюють, наскільки вентиляція важлива для
+                мікроклімату в приміщенні. Навіть побутові приміщення мають пилові
+                забруднення, бактерії, грибки, вологість та інші шкідливі домішки.
 
-        Для деякого підвищення потужності вентиляції, без необхідності
-        порушувати систему природної вентиляції будівлі, додатково застосовують
-        побутові вентилятори, які служать для поліпшення якості повітрообміну.
-        Їх використовують в невеликих побутових приміщеннях: санвузлах, ванних
-        кімнатах, кухнях та житлових приміщеннях.
-        Люди навіть не підозрюють, наскільки вентиляція важлива для
-        мікроклімату в приміщенні. Навіть побутові приміщення мають пилові
-        забруднення, бактерії, грибки, вологість та інші шкідливі домішки.
+                <span style="font-weight: bold;">Класифікація побутових вентиляторів</span>
+                Вентилятори побутові мають різну класифікацію. Використовувати треба
+                той тип вентиляції, котрий буде мати потрібну для того чи іншого
+                приміщення міцність. Крім цього, побутові системи вентиляції можна
+                доповнювати іонізацією, кондиціюванням, зволоженням, охолодженням або
+                підігрівом повітря.
 
-        <span style="font-weight: bold;">Класифікація побутових вентиляторів</span>
-        Вентилятори побутові мають різну класифікацію. Використовувати треба
-        той тип вентиляції, котрий буде мати потрібну для того чи іншого
-        приміщення міцність. Крім цього, побутові системи вентиляції можна
-        доповнювати іонізацією, кондиціюванням, зволоженням, охолодженням або
-        підігрівом повітря.
+                Побутова вентиляція має два варіанти виконання:
+                •&nbsp;&nbsp;&nbsp; стаціонарна, яка встановлюється в будь-яких
+                житлових приміщеннях, наприклад, в багатоквартирних будинках, котеджах
+                і приватних будинках, громадських будівлях;
+                •&nbsp;&nbsp;&nbsp; мобільна, що встановлюється в вагончиках, підсобках.
 
-        Побутова вентиляція має два варіанти виконання:
-        •&nbsp;&nbsp;&nbsp; стаціонарна, яка встановлюється в будь-яких
-        житлових приміщеннях, наприклад, в багатоквартирних будинках, котеджах
-        і приватних будинках, громадських будівлях;
-        •&nbsp;&nbsp;&nbsp; мобільна, що встановлюється в вагончиках, підсобках.
+                Класифікація пристроїв по побутових приміщеннях
+                Досить часто в туалетах застосовуються звичайна решітка вентиляції, але
+                набагато ефективніше замінити її на повноцінний настінний вентилятор.
+                Найбільш часто така вентиляція має з'єднання з вимикачем світла. Таким
+                чином, буде відбуватися максимальна економія електроенергії.
+                Ванна кімната - приміщення з великою вологістю, тому елементи
+                вентиляції повинні бути вологонепроникними. Корпус вентилятора
+                виконують з вологонепроникних матеріалів. Кухня - це приміщення, в
+                якому вентилятор встановлювати необхідно, на відміну від інших
+                приміщень. Найкраще, якщо система буде встановлена в вікні, але
+                припустимі й інші варіанти.
 
-        Класифікація пристроїв по побутових приміщеннях
-        Досить часто в туалетах застосовуються звичайна решітка вентиляції, але
-        набагато ефективніше замінити її на повноцінний настінний вентилятор.
-        Найбільш часто така вентиляція має з'єднання з вимикачем світла. Таким
-        чином, буде відбуватися максимальна економія електроенергії.
-        Ванна кімната - приміщення з великою вологістю, тому елементи
-        вентиляції повинні бути вологонепроникними. Корпус вентилятора
-        виконують з вологонепроникних матеріалів. Кухня - це приміщення, в
-        якому вентилятор встановлювати необхідно, на відміну від інших
-        приміщень. Найкраще, якщо система буде встановлена в вікні, але
-        припустимі й інші варіанти.
-
-        Інтернет-магазин 16А пропонує якісні елементи для того, щоб зробити
-        побутову систему вентиляції.
+                Інтернет-магазин 16А пропонує якісні елементи для того, щоб зробити
+                побутову систему вентиляції.
+            </div>
+        </div>
     </div>
-
 
     <footer class="footer">
         <div class="container">
