--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
 
 
                         <div class="mini_basket" id="mini_basket">
-                            <a class="binfo" href="#"> <!-- ЕСЛИ В КОРЗИНЕ ЕСТЬ ТОВАР ДОБАВЛЯЙ КЛАСС active-->
+                            <a class="binfo" href="#"> <!-- ЕСЛИ В КОРЗИНЕ ЕСТЬ ТОВАР ДОБАВЛЯЙ КЛАСС active к binfo-->
                                 <img class="binfo_image" src="image/b_min1.gif" alt="Ваш кошик">
                                 <div class="minBasket_full">
                                     <p class="minBasket">Кошик</p>
