--- a/app/index.html
+++ b/app/index.html
@@ -279,7 +279,8 @@
 
                                             <div class="col-md-6">
                                                 <ul class="product_slider owl-carousel">
-                                                    <li class="product_slider__item"><img class="product_slider__img" src='image/Products/zefir/a-zefir.jpg' alt='Вентилятор ZEFIR 100S (стандарт) Dospel (Доспел) 111'/></li>
+                                                    <li class="product_slider__item product_slider__item_active"><img class="product_slider__img" src='image/Products/zefir/a-zefir.jpg' alt=""/></li>
+                                                    <!-- Класс product_slider__item_active всегда присваивается первому Li и первое li всегда такое же как и главное фото-->
                                                     <li class="product_slider__item"><img class="product_slider__img" src='image/Products/zefir/z1.jpg' alt='Вентилятор ZEFIR 100S (стандарт) Dospel (Доспел)'/></li>
                                                     <li class="product_slider__item"><img class="product_slider__img" src='image/Products/zefir/z2.jpg' alt='Вентилятор ZEFIR 100S (стандарт) Dospel (Доспел)'/></li>
                                                     <li class="product_slider__item"><img class="product_slider__img" src='image/Products/zefir/z3.jpg' alt='Вентилятор ZEFIR 100S (стандарт) Dospel (Доспел)'/></li>
