--- a/app/index.html
+++ b/app/index.html
@@ -893,7 +893,7 @@
         </div>
 
         <!-- CEO -->
-        <div class="container">
+        <div class="container hidden-xs">
             <div class="col-xs-12">
                 <div class="bottom_info">
                     Інтернет-магазин 16А. Кабель – Світло – Вентиляція - Електрика – Фільтри для води та багато
@@ -926,9 +926,9 @@
                     тримачі та захвати.
 
                 </div>
-
             </div>
         </div>
+
     </main>
     <!---------------------------------------- FOOTER --------------------------------------------------------->
     <footer class="footer">
@@ -1100,15 +1100,39 @@
         </a>
     </div>
 
-    <div id="dialog_pic_full" class="dialog_pic_full" title="Фото"></div>
+<!-- POPUP BIFORE ADD TO SHOPBAG-->
+
+<div class="TEST_BUTTON"></div>  <!--  уберешь эту кнопку и повесешь собитие на то что тебе надо-->
+
+<div class="popup_likeShopbag hidden">
+    <div class="wrapperBlock">
+        <button class="popup_likeShopbag__close">
+            <i class="fa fa-times decor_icon__close" aria-hidden="true"></i>
+        </button>
+        <p class="popup_likeShopbag__text popup_likeShopbag__text_main">Подтверждение</p>
+
+        <div class="popup_likeShopbag__product">
+            <p class="shoppingBasket_product__name">Электро-сеть ываыв ыв аываы аыв аываываыва ываываыва ываываываываыва
+                ываыва</p>
+        </div>
+        <p class="popup_likeShopbag__text  popup_likeShopbag__text_main">добавлен в корзину</p>
+
+        <div class="popup_likeShopbag__buttons">
+            <button class="button_buyProduct popup_likeShopbag__continueBuying">
+                <span class="button_buyProduct__text popup_likeShopbag__buttons_text">Продолжить покупки</span>
+            </button>
+            <button class="button_buyProduct popup_likeShopbag__goToShopbag">
+                <a href="#" class="button_buyProduct__text popup_likeShopbag__goToShopbag_text">Оформление заказа</a>
+            </button>
+        </div>
+
+    </div>
+</div>
+<!-- -->
+
 
 
     <script type="text/javascript" src="libs/jquery.min.js"></script>
-   
-    <!--<script type="text/javascript" src="js/menu-vertical-root-func.js"></script>-->
-    <!--<script type="text/javascript" src="js/menu-vertical-root.js"></script>-->
-    <!--<script type="text/javascript" src="gal4js/modernizr.custom.17475.js"></script>-->
-
 
 <!-- build:js js/libs.min.js -->
 
@@ -1120,6 +1144,12 @@
 <!-- build:js js/common.min.js -->
 <script src="js/common.js"></script>
 <!-- endbuild -->
+
+
+
+
+
+
 
 
     <script>
